--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <title>
+        this is a website
+    </title>
 abadgksjehbiufsebsuiegyoub asddafwgtd
 </head>
 <body>
